1. Write Introduction in README. 2. Update Note-Concurrency.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Concurrency)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Concurrency main.cpp Queue/ThreadSafeQueue.cpp Queue/ThreadSafeQueue.h)
+add_executable(Concurrency main.cpp ThreadSafeQueue/ThreadSafeQueue.cpp ThreadSafeQueue/ThreadSafeQueue.h)
